Fix profile details layout problems

--- a/src/index.css
+++ b/src/index.css
@@ -367,6 +367,12 @@ a:visited {
   object-fit: cover;
 }
 
+.card-img-top.narrow-img-top {
+  width: 100%;
+  height: 90px;
+  object-fit: cover;
+}
+
 /* react-masonry-css styles */
 .my-masonry-grid {
   display: -webkit-box; /* Not needed if autoprefixing */
@@ -476,4 +482,32 @@ a:visited {
 
 .pagination {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.opacity-layout-start {
+  width: 10%;
+  height: max-content;
+  background-color: white;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  height: 100%;
+}
+
+.opacity-layout-end {
+  width: 10%;
+  height: max-content;
+  background-color: white;
+  background: rgb(255, 255, 255);
+  background: rgb(255, 255, 255);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  right: 0;
+  height: 100%;
 }
